fix margin modal, z-index width img

--- a/css/sass/_media.scss
+++ b/css/sass/_media.scss
@@ -25,7 +25,7 @@
             } 
         }
     }
-    .welcome{
+    /*.welcome{
         .box-images{
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -46,7 +46,7 @@
                 }
             }
         }
-    }
+    }*/
 }
 
 // md 768px
